# build-qt6-on-pi

./: .gitignore  Dockerfile  README.md  docker-compose.legacy.yml  docker-compose.yml
docker/: Dockerfile.builder  Dockerfile.builder.template  Dockerfile.sandbox  Dockerfile.sandbox.template
examples/hello/: CMakeLists.txt
examples/webview/: CMakeLists.txt  start_webview.py
examples/webview/src/: main.cpp  mainwindow.cpp  mainwindow.h
requirements/: requirements.txt
scripts/: build_examples.sh  build_qt6.sh  generate_dockerfiles.sh
toolchain/: toolchain-armv6.cmake  toolchain-armv7.cmake  toolchain-armv8.cmake
